--- a/css/home.css
+++ b/css/home.css
@@ -16,8 +16,8 @@ body {
 }
 
 .logo {
-    width: 70px;
-    height: 70px;
+    width: 65px;
+    height: 65px;
 }
 
 input {
@@ -101,6 +101,7 @@ input {
 
 .img-product {
   height: 50%;
+  object-fit: contain;
 }
 
 .itemFooter {
@@ -141,8 +142,8 @@ li:hover {
   }
 
   .logo {
-    width: 15vw;
-    height: 15vw;
+    width: 12vw;
+    height: 12vw;
 }
 
   input {
@@ -176,7 +177,7 @@ li:hover {
 
   .card h6 {
     padding:  0 12px;
-    font-size: 11px;
+    font-size: 13px;
   }
 
   .card h5 {
