--- a/css/itemDetail.css
+++ b/css/itemDetail.css
@@ -92,7 +92,7 @@ input {
 
 .card {
     width: 100%;
-    height: 80%;
+    height: 100%;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -107,7 +107,7 @@ input {
     margin: 0;
     padding: 10px 30px;
     width: 100%;
-    height: 80%;
+    height: 90%;
 }
 
 .imgDetailContainer {
@@ -255,6 +255,11 @@ li:hover {
 
   .content {
     max-height: calc(100vh - (150px + 70px));
+    justify-content: center;
+  }
+
+  .card {
+    height: 65vh;
   }
 
   .imgDetailContainer {
