--- a/css/itemDetail.css
+++ b/css/itemDetail.css
@@ -87,12 +87,12 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - (120px + 100px));
+  min-height: calc(100vh - 250px);
 }
 
 .card {
     width: 100%;
-    height: 80%;
+    height: 100%;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -105,14 +105,12 @@ input {
     display: flex;
     flex-direction: row;
     margin: 0;
-    padding: 10px 30px;
-    width: 100%;
-    height: 80%;
+    padding: 0 30px 30px;
 }
 
 .imgDetailContainer {
   width: 50%;
-  height: 95%;
+  height: 100%;
   display: flex;
   justify-content: center;
   border-right: 1px inset #505050;
@@ -121,7 +119,7 @@ input {
 .card-img {
     max-width: 100%;
     max-height: 100%;
-    object-fit:contain;
+    object-fit: contain;
   }
 
 .description {
@@ -130,7 +128,7 @@ input {
     flex-direction: column;
     height: 100%;
     align-items: start;
-    justify-content :space-between;
+    justify-content :space-evenly;
     text-align: start;
 }
 
@@ -254,7 +252,7 @@ li:hover {
   }
 
   .content {
-    max-height: calc(100vh - (150px + 70px));
+    max-height: calc(100vh - 240px);
   }
 
   .imgDetailContainer {
@@ -273,7 +271,7 @@ li:hover {
     padding: 10px;
   }
 
-  .description h4 {
+  .description h3 {
     font-size: 14px;
     margin-bottom: 30px;
   }
@@ -344,7 +342,7 @@ li:hover {
     padding: 20px;
   }
 
-  .description h4 {
+  .description h3 {
     font-size: 18px;
     margin-bottom: 30px;
   }
@@ -382,4 +380,4 @@ li:hover {
   ul {
     font-size: large;
 }
- }
+}
