--- a/css/home.css
+++ b/css/home.css
@@ -83,6 +83,11 @@ input {
   font-size: 25px;
 }
 
+.logIn {
+  text-decoration: none;
+  color: #fa9102;
+}
+
 .card {
   width: 100%;
   height: 550px;
