--- a/css/itemDetail.css
+++ b/css/itemDetail.css
@@ -90,6 +90,11 @@ input {
   min-height: calc(100vh - 250px);
 }
 
+.logIn {
+  text-decoration: none;
+  color: #fa9102;
+}
+
 .card {
     width: 100%;
     height: 100%;
